--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self' 'unsafe-eval';
+        media-src 'self';
+        style-src 'self' 'unsafe-inline';
+        script-src 'self' 'unsafe-inline' https://maps.googleapis.com/;
+        img-src 'self' https://maps.googleapis.com/ http://maps.gstatic.com/;
+        font-src 'self' ">
     <link rel="stylesheet" href="style.css">
     <title>Geolocation</title>
 
